fixed box bottom issue from overflow:hidden change

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,3 +36,6 @@
 body {
   overflow: hidden;
 }
+#dash {
+  padding-bottom: 20px;
+}
